--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Testing de JavaScript con Jest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,12 @@
   },
   "homepage": "https://github.com/MarioArango/javascript-jest#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.5",
+    "babel-preset-env": "^1.7.0",
     "jest": "^27.0.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
     "babel-polyfill": "^6.26.0"
   }
